<resources>
    <string name="app_name">AppRestaurantes-Cliente</string>
    <string name="menu">Menú</string>


    <string name="login">Login</string>
    <string name="favoritos">Favoritos</string>
    <string name="reservacion">Reservación</string>
    <string name="ordenar">Ordenar</string>
    <string name="agregar">Agregar</string>
    <string name="contenido_vacio" />
    <string name="confirmar">Confirmar</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contenido_cheff">Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset".</string>
    <string name="los_mas_pedidos">Los más pedidos</string>

    <!--
        
        <string name="obteniendo_categorias">Obteniendo categorías</string>
        <string name="obteniendo_platos">Obteniendo platos</string>
        <string name="obteniendo_detalles">Obteniendo detalles</string>
        <string name="segundos">Segundos</string>
    
        <string name="preferidos">Preferidos</string>
    
        -->

</resources>
