<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llcontenidoLogeado"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="25dp"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/v3_avatar"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="@dimen/margen_content_logeado"
        android:layout_gravity="center"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/v3_ico2"
            android:drawableEnd="@drawable/v3_ico1"
            android:drawablePadding="15dp"
            android:text="@string/favoritos"
            android:textColor="@color/rojo"
            android:textSize="15sp"
            />

        <view
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/rojo"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:drawableStart="@drawable/v3_ico3"
            android:drawableEnd="@drawable/v3_ico1"
            android:drawablePadding="7dp"
            android:text="@string/reservacion"
            android:textColor="@color/rojo"
            android:textSize="15sp"

            />

        <view
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/rojo"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawableStart="@drawable/v3_ico4"
            android:drawableEnd="@drawable/v3_ico1"
            android:drawablePadding="15dp"
            android:text="@string/ordenar"
            android:textColor="@color/rojo"
            android:textSize="15sp"

            />

    </LinearLayout>

</LinearLayout>