<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="15dp"
    android:background="@android:color/transparent"

    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/fondo_superior_dialogo"
        android:gravity="center"
        android:text="@string/agregar"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:orientation="horizontal"
        android:padding="25dp"
        >
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".33"
            android:gravity="center"
            >

            <ImageView
                android:id="@+id/tvAumentar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/contenido_vacio"
                android:padding="10dp"
                android:src="@drawable/mas"
                />

        </RelativeLayout>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".33"
            android:gravity="center"
            android:text="1"
            android:textColor="@android:color/black"
            android:textSize="50sp"
            android:textStyle="bold"
            />
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".33"
            android:gravity="center"
            >

            <ImageView
                android:id="@+id/tvReducir"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/contenido_vacio"
                android:padding="10dp"
                android:src="@drawable/menos"
                />
        </RelativeLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="1dp"
        android:background="@color/rojo"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fondo_inferior_dialogo"
        android:gravity="center"
        android:padding="10dp"
        >

        <Button
            android:id="@+id/btnOrdenar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/confirmar"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:theme="@style/boton_rojo"
            />
    </RelativeLayout>

</LinearLayout>